<resources>
    <string name="app_name">Notes</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_new_note">New Note</string>
    <string name="menu_new_category">New Category</string>
    <string name="menu_list_category">Show Categories</string>
    <string name="menu_order_by_title">Order by Title</string>
    <string name="menu_order_by_category">Order by Categories</string>
    <string name="menu_filter_by_category">Filter by Category</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_test">Test</string>
    <string name="menu_select_category">Select Category</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_send">Send Note</string>
    <string name="menu_category">Categories</string>
    <string name="menu_category_delete">Delete Category</string>
    <string name="menu_category_edit">Edit Category</string>
    <string name="categoryName">Category name</string>
    <string name="selectCategory">Select Category</string>
    <string name="actualCategory">Actual Category :</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_category">Edit Category</string>
    <string name="title_activity_note_edit">EditNote</string>
    <string name="title_activity_category_edit">EditCategory</string>
    <string name="title_activity_filter_category">FilterCategory</string>
    <string name="id">ID</string>
</resources>
